force-app/main/default/objects/Appliance_Sale__c/Appliance_Sale__c.object-meta.xml
<CustomObject>
    <label>Appliance Sale</label>
    <nameField>
        <label>Deal ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Appliance Sales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>