force-app/main/default/objects/Appliance_Sale__c/fields/LCD_Warranty_Number__c.field-meta.xml
<CustomField>
    <fullName>LCD_Warranty_Number__c</fullName>
    <label>LCD Warranty Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>