force-app/main/default/objects/Appliance_Sale__c/fields/LED_Service_Vendor_Number__c.field-meta.xml
<CustomField>
    <fullName>LED_Service_Vendor_Number__c</fullName>
    <label>LED Service Vendor Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>