force-app/main/default/objects/Appliance_Sale__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LED</fullName>
            </value>
            <value>
                <fullName>LCD</fullName>
            </value>
            <value>
                <fullName>PLASMA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>