force-app/main/default/objects/Appliance_Sale__c/fields/UserInfo__c.field-meta.xml
<CustomField>
    <fullName>UserInfo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UserInfo</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Appliance_Sales</relationshipName>
    <type>Lookup</type>
</CustomField>