force-app/main/default/objects/Appliance_Sale__c/recordTypes/RT_For_LED_PL.recordType-meta.xml
<RecordType>
    <fullName>RT_For_LED_PL</fullName>
    <active>true</active>
    <label>RT For LED PL</label>
</RecordType>