force-app/main/default/objects/Appliance_Sale__c/recordTypes/RT_For_Plasma.recordType-meta.xml
<RecordType>
    <fullName>RT_For_Plasma</fullName>
    <active>true</active>
    <label>RT For Plasma</label>
</RecordType>